2006-11-05 Alejandro G. Castro <acastro@igalia.com>

        Patch cotributed by Miguel A. Gomez <magomez@igalia.com>
	
	* src/baobab-ringschart.c (bug #363608):
	(draw_tip): Changed the way the tips are drawn. Now the lines to
	the tips don't have corners, and the tips can be drawn all around
	the window (not only by the left and right edges). Made a little
	adjustment to tip rectangles in order to avoid blurry borders.

2006-11-05 Alejandro G. Castro <acastro@igalia.com>

	Patch cotributed by Miguel A. Gomez <magomez@igalia.com>
	
	* src/baobab-ringschart.c (bug #363613):
	(draw_circle): Added a new parameter 'highlighted' in order to
	draw the sector highlighted if it is selected.
	(interpolate_colors): Added a new paremeter 'color' to return the
	result of the function.
	(get_color): Added a new parameter 'highlighted' in order to get a
	highlighted color for selected sectors.
	(baobab_ringschart_draw): Modified in order to draw the center
	circle before calling 'tree_traverse'.
	(tree_traverse): Removed calls to 'draw_circle' to draw the inner
	circle.

2006-10-28  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/baobab-utils.c (set_label_scan): drop GString usage.

2006-10-28  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-scan.c: use 512, not io_block_size.

2006-10-28  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-scan.c:
	* src/baobab-scan.h:

	Clean up a bit Hard links handling so that we just store
	inode and device in the list instead of the full
	GnomeVfsFileInfo.

2006-10-28  Paolo Borelli  <pborelli@katamail.com>

	* data/baobab.glade:
	* data/baobab:
	* src/baobab-utils.c:
	* src/callbacks.c:

	Add a 'Refresh' action. (bug #365086, reported by
	Matthias Clasen, first patch by Emmanuele Bassi)

2006-10-24  Fabio Marzocca  <thesaltydog@gmail.com>

	* pixmaps/Makefile.am:
	* pixmaps/alfa_sort.png:
	* pixmaps/baobab.png:
	* pixmaps/busy.gif:
	* pixmaps/done.png:
	* pixmaps/format_numeric.png:
	* pixmaps/format_percent.png: